# rust_boggle

./: Cargo.toml  Dockerfile
src/: main.rs
src/boggle/: boggle.rs  mod.rs
src/dictionary/: dictionary.rs  mod.rs
src/gamestate/: boggle_render.rs  gamestate.rs  mod.rs
src/handlers/: handlers.rs  mod.rs  websockets.rs
src/models/: board.rs  boggle.rs  dictionary.rs  mod.rs  player.rs  timer.rs  word_list.rs
src/player_state/: player_state.rs
src/render/: render.rs
src/static/: style.css
static/: style.css
