[package]
name = "boggle_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
maud = "0.25.0"
rand = "0.8.5"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.33.0", features = ["full"]}
tower = "0.4.13"
tower-http = {version= "0.4.4", features = ["fs"]}
