[package]
name = "boggle_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.3.0"
axum = {version= "0.7.4", features = ["ws"]}
dotenv = "0.15.0"
futures = "0.3.30"
maud = "0.25.0"
rand = "0.8.5"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
time = "0.3.31"
tokio = {version = "1.35.1", features = ["full"]}
tower = "0.4.13"
tower-http = {version= "0.5.1", features = ["fs"]}
tower-sessions = "0.9.1"
uuid = "1.6.1"
