[package]
name = "boggle_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version= "0.7.4", features = ["ws"]}
dotenv = "0.15.0"
futures = "0.3.30"
maud = "0.26.0"
rand = "0.8.5"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
tokio = {version = "1.36.0", features = ["full"]}
tower = {version = "0.4.13", features = ["buffer", "limit"]}
tower-http = {version= "0.5.1", features = ["fs"]}
tower-sessions = "0.10.2"
uuid = {version="1.7.0", features = ["v4"]}
